--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <button class="btn" id="noButton" onmouseover="moveButton()" onclick="moveButton()">No</button>
             <script>
                 function nextPage() {
-                    window.location.href = "https://wa.me/+231779005985?text=Hi%20i%27ve%20accepted%20to%20be%20your%20valentine%20❤️";
+                    window.location.href = "https://wa.me/+231779005985?text=Hi%20i%27ve%20accepted%20to%20be%20your%20val%20❤️";
                 }
 
                 function moveButton() {
