--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>Home</title>
 </head>
 
-<body>
+<body class="overlay">
     <div class="container">
         <div>
-            <h1 class="header_text">Will You Be My Valentine?</h1>
+            <h1 class="header_text">Will You Be My Val?</h1>
             <!-- <h1 class = "header_text">Are you free tommorow?</h1> -->
         </div>
         <div class="gif_container">
